feat: DM 채팅방 입장 처리 구현